<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <fragment
        android:id="@+id/places_autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium">

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:fontFamily="@font/brandon_medium"
            android:hint="Comment" />

    </com.google.android.material.textfield.TextInputLayout>

<!--TextView Address Detail-->
    <TextView
        android:id="@+id/txt_address_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium"
        android:text="Your Address"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--TextView Delivery Method-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/delivery_method"
        android:textColor="@color/dialog_header_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!--Group Radiobutton location-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Home-->
        <RadioButton
            android:id="@+id/rdi_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/rdi_home"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!--Other address-->
        <RadioButton
            android:id="@+id/rdi_other_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/rdi_other"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!--This address-->
        <RadioButton
            android:id="@+id/rdi_ship_this_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/rdi_ship_to_this"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RadioGroup>

    <!--TextView Payment Method-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/payment_method"
        android:textColor="@color/dialog_header_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!--Group Radiobutton Payment-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--COD Payment-->
        <RadioButton
            android:id="@+id/rdi_cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/rdi_cod"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!--BrainTree Payment-->
        <RadioButton
            android:id="@+id/rdi_braintree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/rdi_braintree"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RadioGroup>

</LinearLayout>