<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="8dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/group_place_holder"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/cart_empty"
        android:textSize="35sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/group_place_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">

<!--ApplyDiscount-->
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/edt_discount_code"
                android:hint="Enter or scan your code"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/ic_check"
                    android:id="@+id/img_check"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:tint="@color/colorPrimary" />

                <ImageView
                    android:src="@drawable/ic_camera_alt"
                    android:id="@+id/img_scan"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:tint="@color/colorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/brandon_medium"
                android:text="@string/cart_total"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_order" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>